--- a/regression-car-price-prediction/Car_price_prediction.ipynb
+++ b/regression-car-price-prediction/Car_price_prediction.ipynb
@@ -2053,14 +2053,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "597f3623-9daa-46e3-9781-0f66615328d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "eece8aac-3514-4493-aa63-c7ba7cf5e383",
    "metadata": {},
@@ -2169,8 +2161,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "ec1852bf-096d-4c27-8049-b3183de34348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "cd9fbd95-1c8f-4e00-9222-9d7383b1a280",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62051.38189029652"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse = np.sqrt(mean_squared_error(y_val, y_pred))\n",
+    "rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e2023a7-3a83-40ca-83db-057cfbe8eb07",
+   "metadata": {},
+   "source": [
+    "## Categorical Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dfe4169-6f05-4daa-887c-6ecb33c24f81",
    "metadata": {},
    "outputs": [],
    "source": []
